# bdoh-core

./: .gitignore  pyproject.toml
bdoh_core/: __init__.py  test.py
bdoh_core/domain/: __init__.py  geometry.py  sensor_things.py
bdoh_core/domain/sensor_things/: __init__.py  datastream.py  feature_of_interest.py  location.py  observation.py  observed_property.py  sensor.py  thing.py
bdoh_core/schemas/: __init__.py
bdoh_core/schemas/sensor_things/: __init__.py  common.py  datastream.py  feature_of_interest.py  location.py  observation.py  observed_property.py  sensor.py  thing.py
