[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bdoh-core"
version = "0.1.0"
description = "Core domain and schemas for BDOH projects"
authors = [{name="Your Name", email="your.email@example.com"}]
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "black>=23.0.0"]

[tool.setuptools.packages.find]
where = ["."]
